--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "@next/mdx": "^14.0.3",
     "@types/mdx": "^2.0.10",
     "next": "14.0.3",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.11.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-toc": "^9.0.0",
+    "shiki": "^0.14.5"
   },
   "devDependencies": {
     "@types/node": "^20",
