--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/mdx": "^2.0.10",
     "next": "14.0.3",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "rehype-autolink-headings": "^7.1.0",
